# fatherApp

./: main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
assets/json/: auth.json
views/MostUsedApplications_screen/: MostUsedApplications_screen.py
views/devices_screen/: devices_screen.py
views/home_screen/: home_screen.py
views/login_screen/: login_screen.py
views/notifications_screen/: notifications_screen.py
views/profile_screen/: profile_screen.py
views/signup_screen/: signup_screen.py
views/welcome_screen/: welcome_screen.py
