[project]
name = "حماية الاطفال"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "flet==0.25.2",
  "flet",
  "requests",
  "pillow",
]

[tool.flet]
org = "com.mycompany"
product = "حماية الاطفال"  # هنا يمكنك وضع اسم التطبيق الذي تريده
company = "Flet"
copyright = "Copyright (C) 2024 by Flet"

[tool.flet.app]
path = "/"
icon = "assets/icons/favicon.png"  # حدد المسار الصحيح للأيقونة
